support GetBucket API
