# internal/manager/api/server/server.gen.go
@@ -28,6 +28,9 @@ type Datastore struct {
 	Id      *int64  `json:"id,omitempty"`
 }
 
+// BucketID defines model for bucketID.
+type BucketID = int64
+
 // DatastoreID defines model for datastoreID.
 type DatastoreID = int64
 
@@ -44,7 +47,10 @@ type ServerInterface interface {
 	CreateBucket(w http.ResponseWriter, r *http.Request)
 	// Delete a bucket
 	// (DELETE /bucket/{id})
-	DeleteBucket(w http.ResponseWriter, r *http.Request, id int64)
+	DeleteBucket(w http.ResponseWriter, r *http.Request, id BucketID)
+	// Get a bucket
+	// (GET /bucket/{id})
+	GetBucket(w http.ResponseWriter, r *http.Request, id BucketID)
 	// Create a datastore
 	// (POST /datastores)
 	CreateDatastore(w http.ResponseWriter, r *http.Request)
@@ -82,7 +88,7 @@ func (siw *ServerInterfaceWrapper) DeleteBucket(w http.ResponseWriter, r *http.R
 	var err error
 
 	// ------------- Path parameter "id" -------------
-	var id int64
+	var id BucketID
 
 	err = runtime.BindStyledParameterWithOptions("simple", "id", r.PathValue("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
@@ -92,6 +98,31 @@ func (siw *ServerInterfaceWrapper) DeleteBucket(w http.ResponseWriter, r *http.R
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.DeleteBucket(w, r, id)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
+// GetBucket operation middleware
+func (siw *ServerInterfaceWrapper) GetBucket(w http.ResponseWriter, r *http.Request) {
+
+	var err error
+
+	// ------------- Path parameter "id" -------------
+	var id BucketID
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", r.PathValue("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "id", Err: err})
+		return
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.GetBucket(w, r, id)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -262,6 +293,7 @@ func HandlerWithOptions(si ServerInterface, options StdHTTPServerOptions) http.H
 
 	m.HandleFunc("POST "+options.BaseURL+"/bucket", wrapper.CreateBucket)
 	m.HandleFunc("DELETE "+options.BaseURL+"/bucket/{id}", wrapper.DeleteBucket)
+	m.HandleFunc("GET "+options.BaseURL+"/bucket/{id}", wrapper.GetBucket)
 	m.HandleFunc("POST "+options.BaseURL+"/datastores", wrapper.CreateDatastore)
 	m.HandleFunc("GET "+options.BaseURL+"/datastores/{id}", wrapper.GetDatastore)
 
